fixed login divider background color in dark mode

--- a/src/routes/LoginBoard/LoginBoard.scss
+++ b/src/routes/LoginBoard/LoginBoard.scss
@@ -168,7 +168,8 @@
   }
 
   @media #{$tablet} {
-    .login-board__form-wrapper {
+    .login-board__form-wrapper,
+    .login-board__divider::after {
       background: $color-dark-two;
     }
   }
